TM-12626 Fix Make the "x" icon permanently visible in each of the Predecessor and Successor rows in Task Edit and Create

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -13,6 +13,8 @@
       border-left: 0
       background: inherit
       color: inherit
+      span.k-i-arrow-s
+        margin-left: -35px
 
 .task-detail-component
   .tds-angular-component-content
@@ -121,6 +123,11 @@
           @include combo-status
           span input
             padding-top: 1px
+          span.k-i-close
+            display: block
+            color: inherit
+            opacity: 1
+            right: 0
         td.label.edge-cell
           height: 35px
         td.label.status-cell
